# prawnloader

./: .eslintignore  .eslintrc.json  .gitignore  .prettierignore  .prettierrc  package.json  pnpm-lock.yaml  svelte.config.js  vite.config.js
.cargo/: config.toml
src/: app.html  app.scss  events.ts  union-to-tuple.ts  utils.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: config.rs  downloader.rs  events.rs  lib.rs  main.rs  music.rs  parser.rs  parsers.rs  youtube.rs
src-tauri/src/downloader/: downloader.rs  mod.rs  queue.rs
src-tauri/src/downloaders/: deezer.rs  mod.rs  youtube.rs
src-tauri/src/models/: music.rs
src-tauri/src/parsers/: deezer.rs  mod.rs  parser.rs  youtube.rs
src/lib/: Greet.svelte  bufferToImg.ts  config.ts  log.ts  music.ts  stores.ts  tauri-wrapper.ts
src/lib/components/: Log.svelte  LogsList.svelte  QueueSong.svelte
src/lib/components/queue_items/: DeezerAlbum.svelte  DeezerTrack.svelte  YoutubePlaylist.svelte  YoutubeVideo.svelte
src/lib/svelte/: Log.svelte  LogsList.svelte  QueueSong.svelte
src/lib/ts/: log.ts  music.ts  stores.ts  unlistenAllTauriEvents.ts
src/models/: Album.ts  Config.ts  Event.ts  Item.ts  QueueItem.ts  Song.ts  music.ts
src/models/parameters/: DownloadRequest.ts
src/routes/: +layout.svelte  +layout.ts  +page.svelte  QueueItem.svelte  QueueSong.svelte
src/routes/settings/: +layout.svelte  +page.svelte  +page.ts
src/routes/settings/deezer/: +page.svelte
src/routes/settings/downloader/: +page.svelte
src/routes/settings/general/: +page.svelte
src/routes/settings/youtube/: +page.svelte
src/scss/: app.scss  font.scss
src/types/: commands.d.ts  events.d.ts  music.d.ts  tauri-api.d.ts  tauri-events.d.ts
