[package]
name = "prawnloader"
version = "0.1.0-beta"
description = "A Tauri app to download music from different sources"
authors = ["ElMoustacho"]
license = "MIT"
repository = "https://github.com/ElMoustacho/prawnloader"
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.2", features = ["dialog-all", "path-all", "shell-open"] }
tokio = { version = "1.25.0", features = ["full"] }
regex = "1.7.1"
reqwest = "0.12.5"
futures = { version = "0.3.26", features = ["thread-pool"] }
once_cell = "1.17.1"
color-eyre = "0.6.2"
crossbeam-channel = "0.5.8"
deezer = { git = "https://github.com/ElMoustacho/deezer-rs" }
deezer_downloader = { git = "https://github.com/zggff/deezer_downloader", rev = "91c38c0" }
url = "2.5.0"
strum_macros = "0.26.4"
thiserror = "1.0.50"
ts-rs = "9.0.1"
rusty_ytdl = { version = "0.7.4", features = ["ffmpeg"] }
tempfile = "3.6.0"
[dependencies.uuid]
version = "1.10.0"
features = [
	"serde",
	"v4",                # Lets you generate random UUIDs
	"fast-rng",          # Use a faster (but still sufficiently random) RNG
	"macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
